Fixed Sizing for Home Page on IPhone 8 and under

--- a/bandwagon/static/bandwagon/main.css
+++ b/bandwagon/static/bandwagon/main.css
@@ -188,11 +188,11 @@ body {
 
 @media (max-width: 440px) {
   .post-list-item {
-    height: 75px;
+    height: 105px;
   }
   
   .post-list-item:hover {
-    height: 85px;
+    height: 115px;
   }
 
   .article-metadata {
